deploy: b0b2393fc3701845ed8c7c0d007995f2d97b6b8c

--- a/index.html
+++ b/index.html
@@ -689,10 +689,10 @@ Indien u het laatste open venster van een toepassing sluit, sluit u ook de toepa
 <p>Zoeken met een zoekmachine naar keuze <code>CTRL+K</code></p>
 <ul>
 <li>
-<p><code>CTRL+PIJLTJE_OMLAAG</code>, <code>CTRL+PIJLTJE_OMHOOG</code> om zoekmachine te selecteren</p>
+<p><code>CTRL+↓</code>, <code>CTRL+↑</code> om zoekmachine te selecteren</p>
 </li>
 <li>
-<p><code>ALT+PIJLTJE_OMLAAG</code>, <code>ALT+PIJLTJE_OMHOOG</code> om zoekmachine te selecteren als u al iets ingetyped hebt</p>
+<p><code>ALT+↓</code>, <code>ALT+↑</code> om zoekmachine te selecteren als u al iets ingetyped hebt</p>
 </li>
 </ul>
 </li>
@@ -1010,7 +1010,7 @@ gaat automatisch akkoord met alle cookies</p>
 <li>
 <p>omhoog te navigeren door in de adresbalk op bovenliggende map te klikken</p>
 <ul>
-<li><code>ALT+PIJLTJE_OMHOOG</code></li>
+<li><code>ALT+↑</code></li>
 </ul>
 </li>
 </ul>
