--- a/oefeningen.html
+++ b/oefeningen.html
@@ -24,7 +24,7 @@
  </div></p>
 </header>
 <h1 id="notatie">Notatie</h1>
-<p>Het lettertype <code>Courier</code> wordt gebruikt om iets op te schrijven dat u op het toetsenbord kunt typen. Uitzondering hierop zijn de volgende speciale toetsen: <code>SPATIEBALK</code>, <code>CTRL</code>, <code>ALT</code>, <code>SUPER</code>, <code>ESC</code>, <code>DELETE</code>, <code>PageDown</code>, <code>PageUp</code>, <code>F1</code>, <code>F2</code> … en <code>ENTER</code>, hier dient u betreffende toets in te drukken in plaats van het woord in te typen.</p>
+<p>Het lettertype <code>Courier</code> wordt gebruikt om iets op te schrijven dat u op het toetsenbord kunt typen. Uitzondering hierop zijn de volgende speciale toetsen: <code>SPATIEBALK</code>, <code>CTRL</code>, <code>ALT</code>, <code>SUPER</code>, <code>MENU</code>, <code>TAB</code>, <code>HOME</code>, <code>END</code>, <code>ESC</code>, <code>DELETE</code>, <code>PageDown</code>, <code>PageUp</code>, <code>PrintScreen</code>, <code>F1</code>, <code>F2</code> … en <code>ENTER</code>, hier dient u betreffende toets in te drukken in plaats van het woord in te typen.</p>
 <h1 id="rondleiding-gnome">Rondleiding GNOME</h1>
 <ol type="1">
 <li><p>Aanmelden en afmelden</p>
@@ -289,11 +289,11 @@
 <ol type="a">
 <li><p>Druk <code>SUPER+3</code></p></li>
 <li><p>Druk <code>F10</code> om de menubalk voor Writer te activeren</p></li>
-<li><p>Druk <code>PIJLTJE-OMLAAG</code></p></li>
-<li><p>Druk <code>PIJLTJE-NAAR-RECHTS</code></p></li>
+<li><p>Druk <code>↓</code></p></li>
+<li><p>Druk <code>→</code></p></li>
 <li><p>Druk <code>SPATIEBALK</code></p></li>
 <li><p>Druk <code>F10</code> om de menubalk voor Writer te activeren</p></li>
-<li><p>Druk <code>PIJLTJE-OMHOOG</code> om snel bij “Afsluiten” te komen</p></li>
+<li><p>Druk <code>↑</code> om snel bij “Afsluiten” te komen</p></li>
 <li><p>Druk <code>SPATIEBALK</code></p></li>
 </ol></li>
 <li><p>Open twee LibreOffice writer vensters en sluit ze één voor één</p>
@@ -504,7 +504,7 @@
 <li><p>Dubbel klik de map <code>Documenten</code>. De adresbalk ziet er nu zo uit: <img src="img/bestanden-adresbalk-documenten.png" height="20" /></p></li>
 <li><p>Ga nu weer omhoog door op “Persoonlijke map” in <img src="img/bestanden-adresbalk-documenten.png" height="20" /> te klikken. De adresbalk ziet er dan weer zo <img src="img/persoonlijke-map-menu.png" height="20" /> uit.</p></li>
 <li><p>Ga opnieuw de map <code>Documenten</code> in.</p></li>
-<li><p>Ga terug omhoog met behulp van <code>ALT+PIJLTJE_OMHOOG</code></p></li>
+<li><p>Ga terug omhoog met behulp van <code>ALT+↑</code></p></li>
 <li><p>Sluit de bestandsbeheerder met <code>ALT+F4</code></p></li>
 </ul></li>
 <li><p>De map <code>Afbeeldingen</code> ingaan.</p>
@@ -533,7 +533,7 @@
 <li><p>Open bestandsbeheerder met <code>SUPER+E</code></p></li>
 <li><p>Ga naar de map <code>bloemen</code> in <code>Afbeeldingen</code></p></li>
 <li><p>Maak mappen <code>composietenfamilie</code>, <code>anjerfamilie</code> en <code>ooievaarsbekfamilie</code> aan.</p></li>
-<li><p>Sleep de afbeeldingen van de bloemen naar de juiste map (als u langer dan een halve seconde boven een map hangt met een plaatje voor u het loslaat navigeert u naar de map, gebruik <code>ALT+PIJLTJE_OMHOOG</code> om weer terug te keren naar <code>bloemen</code>)</p>
+<li><p>Sleep de afbeeldingen van de bloemen naar de juiste map (als u langer dan een halve seconde boven een map hangt met een plaatje voor u het loslaat navigeert u naar de map, gebruik <code>ALT+↑</code> om weer terug te keren naar <code>bloemen</code>)</p>
 <ul>
 <li><p>Akkerdistel, Harig knopkruid, Gewone melkdistel naar <code>composietenfamilie</code></p></li>
 <li><p>Robertskruid en Beemdooievaarsbek naar <code>ooievaarsbekfamilie</code></p></li>
@@ -706,6 +706,29 @@
 <li><p>Met welke sneltoets kunt u een map of bestand hernoemen?</p></li>
 <li><p>Met welke sneltoets kunt u in één keer naar uw persoonlijke map terugkeren?</p></li>
 <li><p>Met welke sneltoets kunt terug gaan naar de lokatie waar u was? En met welke weer vooruit (<em>Hint: dit heet “Ga terug” en “Ga verder”</em>)? Probeer dit uitvoerig uit. U opent de bestandsbeheerder en gaat naar <code>Documenten</code> en dan naar <code>Afbeeldingen/Schermafdrukken</code> en probeert de gevonden sneltoetsen uit.</p></li>
+</ol>
+<h1 id="schakelen-tussen-vensters-of-werkbladen">Schakelen tussen vensters of werkbladen</h1>
+<ol type="1">
+<li><p>Schakelen tussen twee toepassingen op twee werkbladen</p>
+<ul>
+<li><p>Open Firefox met <code>SUPER+1</code></p></li>
+<li><p>Ga via activiteiten naar het werkblad rechts van het huidige werkblad</p>
+<ul>
+<li><code>SUPER</code>, <code>PageDown</code>, <code>SUPER</code></li>
+</ul></li>
+<li><p>Open bestandsbeheer <code>SUPER+E</code></p></li>
+<li><p>Schakel terug naar Firefox met <code>ALT+TAB</code></p>
+<ul>
+<li>Hoe had u dit anders kunnen doen met een sneltoets?</li>
+</ul></li>
+<li><p>Schakel nu weer naar de bestandsbeheerder met <code>ALT+TAB</code></p></li>
+<li><p>Sluit beide toepassingen met <code>ALT+F4</code></p>
+<ul>
+<li><p>Sluit de bestandsbeheerder met <code>ALT+F4</code></p></li>
+<li><p>Schakel met <code>SUPER+1</code> naar Firefox</p></li>
+<li><p>Sluit deze met <code>ALT+F4</code></p></li>
+</ul></li>
+</ul></li>
 </ol>
 <h1 id="toepassingen-installeren">Toepassingen installeren</h1>
 <ol type="1">
