deploy: f629fa218749dfe716037f8d2e0bcc7de694f8dc

--- a/begrippen.html
+++ b/begrippen.html
@@ -25,7 +25,7 @@
 </header>
 <dl>
 <dt>Actiemenu</dt>
-<dd><p>Menu in de bestandsbeheerder te activeren met <code>F10</code> of de drie puntjes bovenelkaar in de adresbalk</p>
+<dd><p>Menu in de bestandsbeheerder te activeren met <code>F10</code> of de drie puntjes boven elkaar in de adresbalk</p>
 </dd>
 </dl>
 <figure>
@@ -53,7 +53,7 @@
 <dd><p>Verzameling programma’s die de hardware aanstuurt en zorgt dat toepassingen kunnen draaien.</p>
 </dd>
 <dt>Bovenbalk</dt>
-<dd><p>Onderdeel van de GNOME desktop. De zwarte balk aan de bovenzijde van het scherm met links activiteiten, in het midden de tijdsaanduiding en met systeemmenu rechts.</p>
+<dd><p>Onderdeel van de GNOME desktop. De zwarte balk aan de bovenzijde van het scherm met links de activiteiten knop, in het midden de tijdsaanduiding en rechts het systeemmenu.</p>
 </dd>
 </dl>
 <figure>
@@ -100,6 +100,9 @@
 </ol>
 <p>Zie verder de <a href="https://tldp.org/LDP/Linux-Filesystem-Hierarchy/html/index.html">online-documentatie</a>.</p>
 <dl>
+<dt>Focus</dt>
+<dd><p>Één GUI-element (knop, lijst, invoerveld) of venster kan de focus hebben. Dit betekent dat invoer van het toetsenbord naar dat element of venster wordt gestuurd. U wisselt focus tussen toepassingen met <code>ALT+TAB</code>. Tussen vensters op één scherm met <code>ALT+ESC</code>. En tussen verschillende vensters van dezelfde toepassing met <code>ALT+BACKTICK</code>.</p>
+</dd>
 <dt>GNOME</dt>
 <dd><p>Standaard desktop manager onder debian. Zie <a href="https://help.gnome.org/users/gnome-help/stable/index.html.nl">GNOME docs</a></p>
 </dd>
