--- a/oefeningen.html
+++ b/oefeningen.html
@@ -89,7 +89,7 @@
 <li><p>Type <code>samenv</code> en <code>ENTER</code></p></li>
 <li><p>Druk <code>CTRL+W</code> om haar weer te sluiten</p></li>
 </ol></li>
-<li><p>Ga applicatie modus in en verlaat haar onverrichter zake weer</p>
+<li><p>Ga applicatie modus in en verlaat haar onverrichter zake weer (zes keer)</p>
 <ol type="a">
 <li><p>Ga binnen via <code>SUPER+A</code></p>
 <ol type="i">
@@ -97,7 +97,7 @@
 <li><p>Verlaten via <code>ESC ESC</code></p></li>
 <li><p>Verlaten via <img src="img/activiteiten-knop.png" height="20" /></p></li>
 </ol></li>
-<li><p>Ga binnen via <img src="img/activiteiten-knop.png" height="20" /></p>
+<li><p>Ga met behulp de muis binnen via <img src="img/activiteiten-knop.png" height="20" /> en <img src="img/3x3-puntjes-op-dash.png" height="20" /></p>
 <ol type="i">
 <li><p>Verlaten via <code>SUPER</code></p></li>
 <li><p>Verlaten via <code>ESC ESC</code></p></li>
@@ -106,8 +106,8 @@
 </ol></li>
 <li><p>Ga applicatie modus binnen op een wijze naar keuze en</p>
 <ol type="a">
-<li><p>Sleep firefox <img src="img/firefox-icon.png" height="20" /> naar het eerste (linker) werkblad</p></li>
-<li><p>Sleep kaarten <img src="img/kaarten-icon.png" height="20" /> naar het tweede (rechter) werkblad</p></li>
+<li><p>Sleep firefox <img src="img/firefox-icon.png" width="40" /> naar het eerste (linker) werkblad</p></li>
+<li><p>Sleep kaarten <img src="img/kaarten-icon.png" width="40" /> naar het tweede (rechter) werkblad</p></li>
 <li><p>Ga naar gewone modus op een wijze naar keuze</p></li>
 <li><p>Sluit beide toepassingen</p>
 <ol type="i">
@@ -141,14 +141,14 @@
 </ol></li>
 <li><p>Netwerk uitschakelen en opnieuw inschakelen</p>
 <ol type="a">
-<li><p>Start <img src="img/firefox-icon.png" height="20" /> en ga naar <code>tldp.org</code>.</p></li>
+<li><p>Start <img src="img/firefox-icon.png" width="40" /> en ga naar <code>tldp.org</code>.</p></li>
 <li><p>Open het systeemmenu</p></li>
 <li><p>Klik <img src="img/ethernet-in-uit.png" height="20" />, knop wordt grijs</p></li>
 <li><p>Sluit systeemmenu</p></li>
-<li><p>Start <img src="img/firefox-icon.png" height="20" /> en ga naar <code>debian.org</code>, dit zal niet gaan</p></li>
+<li><p>Start <img src="img/firefox-icon.png" width="40" /> en ga naar <code>debian.org</code>, dit zal niet gaan</p></li>
 <li><p>Klik <img src="img/ethernet-in-uit-grijs.png" height="20" />, knop krijgt weer kleur</p></li>
 <li><p>Sluit systeemmenu</p></li>
-<li><p>Ga naar <img src="img/firefox-icon.png" height="20" /> en herlaad de pagina met <code>F5</code></p></li>
+<li><p>Ga naar <img src="img/firefox-icon.png" width="40" /> en herlaad de pagina met <code>F5</code></p></li>
 </ol></li>
 <li><p>Afmelden op twee manieren</p>
 <ol type="a">
@@ -222,10 +222,15 @@
 </ol></li>
 <li><p>Ken <code>ALT+CTRL+T</code> toe aan de opdracht <code>gnome-terminal</code> onder de naam <code>Terminal</code>.</p></li>
 </ol></li>
-<li><p>Sneltoetsen opzoeken. Open de sneltoetsen instellingen zoals in beschreven in de eerste oefening.</p>
+<li><p>Sneltoetsen opzoeken. Open de sneltoetsen instellingen zoals in beschreven in de eerste oefening <em>(Hint: Afdeling “Vensters”)</em>.</p>
 <ol type="a">
 <li><p>Wat is de toets voor maximaliseren</p></li>
 <li><p>Wat is de toets voor herstellen</p></li>
+</ol></li>
+<li><p>Sneltoetsen opzoeken. Open de sneltoetsen instellingen zoals in beschreven in de eerste oefening. Gebruik nu het vergrootglas bovenaan het venster om te zoeken.</p>
+<ol type="a">
+<li><p>Wat is de toets voor “Toepassingenmenu openen”</p></li>
+<li><p>Wat is de toets voor “Afmelden”</p></li>
 </ol></li>
 <li><p>Open en sluit terminal 1</p>
 <ol type="a">
@@ -247,11 +252,11 @@
 <ol type="a">
 <li><p>Ga in applicatie modus met de muis:</p>
 <ol type="i">
-<li><p>Klik op <img src="img/activiteiten-knop.png" width="100" /></p></li>
+<li><p>Klik op <img src="img/activiteiten-knop.png" height="20" /></p></li>
 <li><p>Klik op de 3x3 puntjes op de dash <img src="img/3x3-puntjes-op-dash.png" width="100" /></p></li>
 </ol></li>
 <li><p>Sleep het <img src="img/terminalvenster-icon.png" width="50" /> naar het eerste werkblad</p></li>
-<li><p>Klik op <img src="img/activiteiten-knop.png" width="100" /> om applicatie modus te verlaten</p></li>
+<li><p>Klik op <img src="img/activiteiten-knop.png" height="20" /> om applicatie modus te verlaten</p></li>
 <li><p>Klik op een willekeurige plek van het terminalvenster</p></li>
 <li><p>Sluit het terminalvenster door <code>ALT+F4</code> in te drukken</p></li>
 </ol></li>
@@ -351,11 +356,11 @@
 </ol></li>
 <li><p>Open en sluit twee firefox vensters met de muis</p>
 <ol type="a">
-<li><p>Ga activiteiten modus in door op <img src="img/activiteiten-knop.png" width="100" /> te klikken</p></li>
-<li><p>Klik op <img src="img/firefox-icon.png" width="50" /> op de dash</p></li>
-<li><p>Ga opnieuw activiteiten modus in door op <img src="img/activiteiten-knop.png" width="100" /> te klikken</p></li>
-<li><p>Klik met <code>CTRL</code> ingedrukt op <img src="img/firefox-icon.png" width="50" /> op de dash</p></li>
-<li><p>Verlaat activiteiten modus door op <img src="img/activiteiten-knop.png" width="100" /> te klikken</p></li>
+<li><p>Ga activiteiten modus in door op <img src="img/activiteiten-knop.png" height="20" /> te klikken</p></li>
+<li><p>Klik op <img src="img/firefox-icon.png" width="40" /> op de dash</p></li>
+<li><p>Ga opnieuw activiteiten modus in door op <img src="img/activiteiten-knop.png" height="20" /> te klikken</p></li>
+<li><p>Klik met <code>CTRL</code> ingedrukt op <img src="img/firefox-icon.png" width="40" /> op de dash</p></li>
+<li><p>Verlaat activiteiten modus door op <img src="img/activiteiten-knop.png" height="20" /> te klikken</p></li>
 <li><p>Klik de beide vensters dicht door op het kruisje rechtsboven te klikken</p>
 <ol type="i">
 <li>Noem twee manieren waarop dit sluiten van beide vensters in één keer had gekunt (er zijn drie manieren)</li>
@@ -560,7 +565,7 @@
 <li><p>Ga terug naar <code>Afbeeldingen/Schermafdrukken</code></p></li>
 <li><p>Staat de schermafdruk hier nog?</p></li>
 <li><p>Navigeer terug naar <code>Documenten</code></p></li>
-<li><p>Gooi de schermafdruk in de prullenbak met <code>DELETE</code></p></li>
+<li><p>Gooi de schermafdruk in de prullenbak door haar te selecteren en <code>DELETE</code> te drukken</p></li>
 <li><p>Sluit de bestandsbeheerder met <code>ALT+F4</code></p></li>
 </ul></li>
 <li><p>Map <code>Video's</code> in de prullenbak gooien en terughalen</p>
@@ -575,7 +580,7 @@
 <li><p>U ziet dat de map <code>Video's</code> er weer staat</p></li>
 <li><p>Sluit de bestandsbeheerder met <code>ALT+F4</code></p></li>
 </ul></li>
-<li><p>Een bestand in de prullenbak gooien en er weer uit terughalen.</p>
+<li><p>Een map in de prullenbak gooien en er weer uit terughalen.</p>
 <ul>
 <li><p>Open bestandsbeheerder met <code>SUPER+E</code></p></li>
 <li><p>Maak een map <code>oefening-prullenbak</code> aan</p></li>
@@ -609,7 +614,6 @@
 <ul>
 <li><p>Open bestandsbeheerder met <code>SUPER+E</code></p></li>
 <li><p>ga met behulp van uw bladwijzer naar de eerder aangemaakt map <code>werkstuk-protohistorie</code></p></li>
-<li><p>maak mappen aan met de namen <code>bronstijd</code> en <code>ijzertijd</code></p></li>
 <li><p>navigeer in de map <code>bronstijd</code></p></li>
 <li><p>maak een bladwijzer aan met <code>CTRL+D</code></p></li>
 <li><p>navigeer in de map <code>ijzertijd</code></p></li>
@@ -641,7 +645,10 @@
 </ul></li>
 <li><p>Werkstukje maken over protohistorie.</p>
 <ul>
-<li><p>Zoek met Firefox op Wikipedia naar protohistorie</p></li>
+<li><p>Zoek met Firefox op Wikipedia naar protohistorie</p>
+<ul>
+<li>Gebruik <code>CTRL+K</code> en <code>CTRL+↑</code>, <code>CTRL+↓</code></li>
+</ul></li>
 <li><p>Print de pagina <a href="https://nl.wikipedia.org/wiki/Protohistorie"><code>https://nl.wikipedia.org/wiki/Protohistorie</code></a> naar pdf en sla deze op in de map <code>werkstuk-protohistorie</code> gebruikmakend van de bladwijzer.</p></li>
 <li><p>Sluit Firefox</p></li>
 <li><p>Open opnieuw bestandsbeheerder met <code>SUPER+E</code></p></li>
@@ -660,7 +667,7 @@
 <li><p>Open bestandsbeheerder met <code>SUPER+E</code></p></li>
 <li><p>Navigeer naar <code>Afbeeldingen</code></p></li>
 <li><p>Dubbelklik op <code>bloemen.zip</code></p></li>
-<li><p>In achiefbeheer kunt u het archief bezien, dubbelklik op <code>bloemen</code> om de familie mappen te zien, dubbelklik verder op bijvoorbeeld `<code>anjerfamilie</code> om de anjers te zien.</p></li>
+<li><p>In achiefbeheer kunt u het archief bezien, dubbelklik op <code>bloemen</code> om de familie mappen te zien, dubbelklik verder op bijvoorbeeld <code>anjerfamilie</code> om de anjers te zien.</p></li>
 <li><p>Sluit archiefbeheer met <code>ALT+F4</code></p></li>
 <li><p>Sluit de bestandsbeheerder met <code>ALT+F4</code></p></li>
 </ul></li>
