--- a/samenvatting.html
+++ b/samenvatting.html
@@ -46,11 +46,12 @@
 <li><p>Toepassingen starten</p></li>
 <li><p>Documenten zoeken</p></li>
 <li><p>Toepassing wisselen</p></li>
+<li><p>Dash favoritieten verwijderen</p></li>
 <li><p>Applicatie modus</p></li>
 </ul></li>
 <li><p>Applicatie modus (<code>SUPER+A</code>)</p>
 <ul>
-<li><p>Toepassingen openen</p></li>
+<li><p>Toepassingen starten</p></li>
 <li><p>Werkblad wisselen</p></li>
 <li><p>Toepassing slepen naar werkblad</p></li>
 <li><p>Dash aanpassen</p></li>
@@ -77,6 +78,7 @@
 <li><p>Systeemmenu</p>
 <ol type="a">
 <li><p>Volume regeling</p></li>
+<li><p>Screenshots maken</p></li>
 <li><p>Instellingen</p></li>
 <li><p>Netwerk instellingen</p></li>
 <li><p>Vergrendeling</p></li>
@@ -95,7 +97,7 @@
 </ol>
 <h4 id="dash">Dash</h4>
 <ol start="3" type="1">
-<li><p>Sneltoetsen: <code>SUPER+1</code>, etc.</p>
+<li><p>Sneltoetsen: <code>SUPER+1</code>, <code>SUPER+2</code>, <code>SUPER+3</code>, etc.</p>
 <ol type="a">
 <li><p>Openen</p></li>
 <li><p>Focus terug te krijgen</p></li>
@@ -137,13 +139,12 @@
 <li><p>Via toepassingsmenu</p></li>
 <li><p>Via bestandsmenu van de toepassing</p></li>
 </ul>
-<!-- tot hier gelijk -->
 <h1 id="veel-gebruikte-toepassingen">Veel gebruikte toepassingen</h1>
 <ol type="a">
 <li><p>Internet browser: Firefox</p></li>
 <li><p>Bestandsbeheer</p></li>
-<li><p>LibreOffice</p></li>
 </ol>
+<!-- a.  LibreOffice -->
 <h2 id="internet-browser-firefox">Internet browser: Firefox</h2>
 <ol type="a">
 <li><p>Belangrijkste sneltoetsen</p>
@@ -287,7 +288,7 @@
 <ul>
 <li><p>Navigeer naar map</p>
 <ul>
-<li><p>drie puntjes menu: “Toevoegen aan bladwijzers”</p></li>
+<li><p>Actiemenu: “Toevoegen aan bladwijzers”</p></li>
 <li><p><code>CTRL+D</code></p></li>
 </ul></li>
 <li><p>Sleep map naar linkerpaneel boven “Nieuwe bladwijzer”</p></li>
@@ -333,7 +334,7 @@
 </ul></li>
 </ul></li>
 </ol>
-<h1 id="schakelen-tussen-vensters-of-werkbladen">Schakelen tussen vensters of werkbladen</h1>
+<h1 id="wisselen-tussen-vensters-of-werkbladen">Wisselen tussen vensters of werkbladen</h1>
 <ol type="1">
 <li><p>Wisselen tussen geopende toepassingen</p>
 <ol type="a">
@@ -350,7 +351,7 @@
 <ul>
 <li>Groeperen van dingen die u doet</li>
 </ul></li>
-<li><p>Schakelen tussen werkbladen</p>
+<li><p>Wisselen tussen werkbladen</p>
 <ul>
 <li><p><code>SUPER+PageDown</code>, <code>SUPER+PageUp</code></p></li>
 <li><p>Activiteiten modus</p>
@@ -362,7 +363,7 @@
 <li><p>Venster verplaatsen naar werkblad</p>
 <ul>
 <li><p>slepen in activiteiten modus</p></li>
-<li><p>venster menu</p></li>
+<li><p>venstermenu</p></li>
 </ul></li>
 <li><p>Venster meenemen naar werkblad</p>
 <ul>
@@ -371,7 +372,7 @@
 </ol></li>
 <li><p>Vensterbeheer</p>
 <ol type="a">
-<li><p>Venster menu <img src="img/venster-menu.png" height="200" /></p>
+<li><p>Venstermenu <img src="img/venster-menu.png" height="200" /></p>
 <ul>
 <li><p>Context menu van titelbalk</p></li>
 <li><p><code>ALT+SPATIEBALK</code></p></li>
